syntax = "proto3";

package userspb;

option go_package = "/userspb";


message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
    User user = 1;
}

message GetUsersRequest {

}

message GetUsersResponse {
    repeated User user = 1;
}


service UsersService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}